--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,7 @@
 		<div id="project-grid">
 			<div class="project-card">
 				<h3>Bright Steps</h3>
-				<p>Raising a child with a developmental disability can be stressful. Families often dont even know where to start.Things get dicy,when you add financial complications to the mix. Unfortunately for down syndrome, the child has like a 6 year window to grasp fundamentals like speech, walking, cognition, social skills and toilet training. Since every child is different, these milestones may need to be guided through  with  specialized pedetritians and physiotherapists, and sometimes, the bills get out of control. In these challenging times,let us bring you an AI driven solution that you can trust. Get quality,therapy sessions and guidance that is tailored, specifically for your child.
-					
-					</p>
+				<p>Raising a child with Down syndrome can be overwhelming, especially with the financial burden of specialized care. With a crucial 6-year window for key developmental milestones, personalized therapy is essential. Our AI-driven solution offers affordable, tailored therapy sessions and guidance for your child's unique needs.</p>
 				<div class="project-buttons">
 					<a href="https://github.com/Ability-allies/DSTV" class="page-btn"> GitHub</a>
 					<a href="https://toonshi.github.io/brightSteps/" class="page-btn">Check it Out</a>
