--- a/projects.html
+++ b/projects.html
@@ -2,57 +2,70 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Life is one big project</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Life is One Big Project</title>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="styles/main.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
-	<!-- Navbar -->
-	<nav class="navbar">
-		<div>
-			<a href="index.html">Home</a>
-			<a href="projects.html">Projects</a>
-			<a href="#about">About Me</a>
-		</div>
-	</nav>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="#about">About Me</a>
+    </div>
+  </nav>
 
-	<!-- Projects Section -->
-	<section id="projects">
-		<header>
-			<h2>My Projects</h2>
-		</header>
+  <!-- Projects Section -->
+  <section id="projects">
+    <header>
+      <h2>My Projects</h2>
+    </header>
 
-		<div id="project-grid">
-			<div class="project-card">
-				<h3>Bright Steps</h3>
-				<p>Raising a child with Down syndrome can be overwhelming, especially with the financial burden of specialized care. With a crucial 6-year window for key developmental milestones, personalized therapy is essential. Our AI-driven solution offers affordable, tailored therapy sessions and guidance for your child's unique needs.</p>
-				<div class="project-buttons">
-					<a href="https://github.com/Ability-allies/DSTV" class="page-btn"> GitHub</a>
-					<a href="https://toonshi.github.io/brightSteps/" class="page-btn">Check it Out</a>
-				</div>
-			</div>
-			<div class="project-card">
-				<h3>Tailored.</h3>
-				<p>Ecommerce platform with a twist. &#91;ML and AI&#93;</p>
-				<div class="project-buttons">
-					<a href="https://github.com/toonshi" class="page-btn">GitHub</a>
-					<a href="project1.html" class="page-btn">Check it Out</a>
-				</div>
-			</div>
-			<div class="project-card">
-				<h3>Ziada</h3>
-				<p>Coming sooon</p>
-				<div class="project-buttons">
-					<a href="https://github.com/your-project-repo3" class="page-btn">GitHub</a>
-					<a href="project1.html" class="page-btn">Check it Out</a>
-				</div>
-			</div>
-		</div>
-	</section>
+    <div id="project-grid">
+      <!-- Project 1 -->
+      <div class="project-card">
+        <h3>Bright Steps</h3>
+        <p>Raising a child with Down syndrome can be overwhelming, especially with the financial burden of specialized care. With a crucial 6-year window for key developmental milestones, personalized therapy is essential. Our AI-driven solution offers affordable, tailored therapy sessions and guidance for your child's unique needs.</p>
+        <div class="project-buttons">
+          <a href="https://github.com/Ability-allies/DSTV" class="page-btn">GitHub</a>
+          <a href="https://toonshi.github.io/brightSteps/" class="page-btn">Check it Out</a>
+        </div>
+      </div>
+
+      <!-- Project 2 -->
+      <div class="project-card">
+        <h3>Project 2</h3>
+        <p>Ecommerce platform</p>
+        <div class="project-buttons">
+          <a href="https://github.com/toonshi" class="page-btn">GitHub</a>
+          <a href="project1.html" class="page-btn">Check it Out</a>
+        </div>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="project-card">
+        <h3>Project 3</h3>
+        <p>Coming soon.</p>
+        <div class="project-buttons">
+          <a href="https://github.com/your-project-repo3" class="page-btn">GitHub</a>
+          <a href="project1.html" class="page-btn">Check it Out</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Me Section -->
+  <section id="about">
+    <header>
+      <h2>About Me</h2>
+    </header>
+    <p>A brief description about yourself goes here. You can include your skills, experience, and any other relevant details.</p>
+  </section>
 </body>
 
 </html>
