--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<div>
 			<a href="index.html">Home</a>
 			<a href="projects.html">Projects</a>
+			<a href="skills.html">Skills</a>
+
 			<a href="#about">About Me</a>
 		</div>
 	</nav>
@@ -39,18 +41,18 @@
 			</div>
 			<div>
 				<h3>Technical Skills</h3>
-				<p>Java, Django, JavaScript, Python, SQL,Blender and more. See my expertise in action.</p>
-        <a href="skills.html" class="page-btn">View Skills</a>
+				<p>Java, Django, JavaScript, Python, SQL, Blender and more. See my expertise in action.</p>
+				<a href="skills.html" class="page-btn">View Skills</a>
 			</div>
 			<div>
 				<h3>Writing Portfolio</h3>
 				<p>Check out my technical articles, where I break down complex topics and share insights.</p>
-        <a href="https://medium.com/@agoyamike" class="page-btn">Go to Medium</a>
+				<a href="https://medium.com/@agoyamike" class="page-btn">Go to Medium</a>
 			</div>
 			<div>
 				<h3>Hackathon Experience</h3>
 				<p>Read about my journey through various hackathons</p>
-        <a href="projects.html" class="page-btn">View projects</a>
+				<a href="projects.html" class="page-btn">View projects</a>
 			</div>
 		</div>
 	</section>
