--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       <h2>My Projects</h2>
     </header>
 
-    <div id="project-grid">
+    <div id="projects-grid">
       <!-- Project 1 -->
       <div class="project-card">
         <h3>Bright Steps</h3>
