--- a/skills.html
+++ b/skills.html
@@ -8,6 +8,9 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="styles/main.css">
+
+	<!-- Font Awesome for icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -24,7 +27,7 @@
 	<!-- Technical Skills Section -->
 	<section id="technical-skills">
 		<div class="resume-section">
-			<a href="assets/resume.pdf" download class="resume-btn">Download Resume</a>
+			<a href="assets/resume.pdf" download class="cta" >Download Resume</a>
 		</div>
 
 		<header>
@@ -92,13 +95,14 @@
 					<li>CI/CD (GitHub Actions)</li>
 				</ul>
 			</div>
+
+			<!-- Animation & 3D -->
 			<div class="skills-card">
-				<h3><i class="fas fa-cloud"></i> Animation  &amp; 3d </h3>
+				<h3><i class="fas fa-film"></i> Animation & 3D</h3>
 				<ul>
 					<li>Blender</li>
-					<li>Davinci Resolve<li>
+					<li>Davinci Resolve</li>
 					<li>After Effects</li>
-
 				</ul>
 			</div>
 
