Edited stuff around

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<section id="about">
 		<header>
 			<h2>About Me</h2>
-			<p>Hello! I'm Michael, a second-year Computer Science student passionate about technology and development. I love turning ideas into reality through code and am always eager to learn and explore new tools and technologies.</p>
+			<p>Hello! I'm Michael, a Computer Science student passionate about technology and development. I love turning ideas into reality through code and am always eager to learn and explore new tools and technologies.</p>
 			<a href="mailto:agoyamike@gmail.com" class="cta">Get in Touch</a>
 		</header>
 	</section>
