--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,8 @@
     <div>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="#about">About Me</a>
+      <a href="skills.html">Skills</a>
+    
     </div>
   </nav>
 
