--- a/skills.html
+++ b/skills.html
@@ -19,8 +19,7 @@
 		<div>
 			<a href="index.html">Home</a>
 			<a href="projects.html">Projects</a>
-			<a href="skills.html">Technical Skills</a>
-			<a href="#about">About Me</a>
+			<a href="skills.html">Skills</a>
 		</div>
 	</nav>
 
