fixed download resume

--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
 	<!-- Technical Skills Section -->
 	<section id="technical-skills">
 		<div class="resume-section">
-			<a href="assets/resume.pdf" download class="cta" >Download Resume</a>
+			<a href="assets/Resume.pdf" download class="cta" >Download Resume</a>
 		</div>
 
 		<header>
