edited some projects

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </header>
 
     <div id="projects-grid">
-      <!-- Project 1 -->
+      
       <div class="project-card">
         <h3>Bright Steps</h3>
         <p>Raising a child with Down syndrome can be overwhelming, especially with the financial burden of specialized care. With a crucial 6-year window for key developmental milestones, personalized therapy is essential. Our AI-driven solution offers affordable, tailored therapy sessions and guidance for your child's unique needs.</p>
@@ -38,10 +38,10 @@
         </div>
       </div>
 
-      <!-- Project 2 -->
+     
       <div class="project-card">
-        <h3>Project 2</h3>
-        <p>Ecommerce platform</p>
+        <h3>Ziada</h3>
+        <p>A local online marketplace where parents & businesses can buy and sell stationery, uniforms & course material. By connecting families,we offer both auction-style listings and fixed-price sales. Founded in 2024,Ziada is set to become one of Kenya's largest e-commerce platforms.</p>
         <div class="project-buttons">
           <a href="https://github.com/toonshi" class="page-btn">GitHub</a>
           <a href="project1.html" class="page-btn">Check it Out</a>
@@ -50,7 +50,7 @@
 
       <!-- Project 3 -->
       <div class="project-card">
-        <h3>Project 3</h3>
+        <h3>Pharmiliar</h3>
         <p>Coming soon.</p>
         <div class="project-buttons">
           <a href="https://github.com/your-project-repo3" class="page-btn">GitHub</a>
