--- a/skills.html
+++ b/skills.html
@@ -43,7 +43,7 @@
 					<li>JavaScript</li>
 					<li>Java</li>
 					<li>C++</li>
-					<li>Django</li>
+					<li> Kotlin</li>
 				</ul>
 			</div>
 
