--- a/skills.html
+++ b/skills.html
@@ -59,15 +59,27 @@
 				</ul>
 			</div>
 
+			<div class="skills-card">
+				<h3><i class="fas fa-laptop-code"></i> AI</h3>
+				<ul>
+					<li>RAG</li>
+					<li>Neural Networks</li>
+					<li>Machine Learning</li>
+					<li>Agents</li>
+					<li>Ollama</li>
+				</ul>
+			</div>
+
 			<!-- Tools & Frameworks -->
 			<div class="skills-card">
 				<h3><i class="fas fa-tools"></i> Tools & Frameworks</h3>
 				<ul>
 					<li>Git & GitHub</li>
-					<li>Visual Studio Code</li>
-					<li>Webpack</li>
+					<li>Kaggle</li>
+					<li>Hugging Face</li>
 					<li>Postman</li>
 					<li>Heroku & Netlify</li>
+
 				</ul>
 			</div>
 
