robot icon in skills.html

--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="skills-card">
-				<h3><i class="fas fa-laptop-code"></i> AI</h3>
+				<h3><i class="fas fa-robot"></i> AI</h3>
 				<ul>
 					<li>RAG</li>
 					<li>Neural Networks</li>
