--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,9 @@
       <!-- Project 3 -->
       <div class="project-card">
         <h3>Pharmiliar</h3>
-        <p>Coming soon.</p>
+        <p>Tracking a long illness can be difficult,hospital documents also come with a lot of legalese, ambiguos to the average mwananchi, unfortunately, some institutions have been caught overbilling, and making “mistakes” which could get expensive. 
+          By predicting your medical expenses, keeping track of your receipts and procedures, Pharmiliar hopes to make your journey to recovery easier and affordable.
+          </p>
         <div class="project-buttons">
           <a href="https://github.com/your-project-repo3" class="page-btn">GitHub</a>
           <a href="project1.html" class="page-btn">Check it Out</a>
