pharmiliar github link

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <h3>Ziada</h3>
         <p>A local online marketplace where parents & businesses can buy and sell stationery, uniforms & course material. By connecting families,we offer both auction-style listings and fixed-price sales. Founded in 2024,Ziada is set to become one of Kenya's largest e-commerce platforms.</p>
         <div class="project-buttons">
-          <a href="https://github.com/toonshi" class="page-btn">GitHub</a>
+          <a href="https://github.com/toonshi/pharmiliar2.0" class="page-btn">GitHub</a>
           <a href="project1.html" class="page-btn">Check it Out</a>
         </div>
       </div>
