updated the brightsteps project

--- a/projects.html
+++ b/projects.html
@@ -33,17 +33,17 @@
         <h3>Bright Steps</h3>
         <p>Raising a child with Down syndrome can be overwhelming, especially with the financial burden of specialized care. With a crucial 6-year window for key developmental milestones, personalized therapy is essential. Our AI-driven solution offers affordable, tailored therapy sessions and guidance for your child's unique needs.</p>
         <div class="project-buttons">
-          <a href="https://github.com/Ability-allies/DSTV" class="page-btn">GitHub</a>
-          <a href="https://toonshi.github.io/brightSteps/" class="page-btn">Check it Out</a>
+          <a href="https://github.com/toonshi/ragsteps" class="page-btn">GitHub</a>
+          <a href="https://brightsteps.streamlit.app" class="page-btn">Check it Out</a>
         </div>
       </div>
 
      
       <div class="project-card">
         <h3>Ziada</h3>
-        <p>A local online marketplace where parents & businesses can buy and sell stationery, uniforms & course material. By connecting families,we offer both auction-style listings and fixed-price sales. Founded in 2024,Ziada is set to become one of Kenya's largest e-commerce platforms.</p>
+        <p>A local online marketplace where parents and businesses can buy and sell stationery, uniforms and course material. By connecting families,we offer both auction-style listings and fixed-price sales. Founded in 2024,Ziada is set to become one of Kenya's largest e-commerce platforms.</p>
         <div class="project-buttons">
-          <a href="https://github.com/toonshi/pharmiliar2.0" class="page-btn">GitHub</a>
+          <a href="https://github.com/toonshi/" class="page-btn">GitHub</a>
           <a href="project1.html" class="page-btn">Check it Out</a>
         </div>
       </div>
@@ -55,7 +55,7 @@
           By predicting your medical expenses, keeping track of your receipts and procedures, Pharmiliar hopes to make your journey to recovery easier and affordable.
           </p>
         <div class="project-buttons">
-          <a href="https://github.com/your-project-repo3" class="page-btn">GitHub</a>
+          <a href="https://github.com/toonshi/pharmiliar2.0" class="page-btn">GitHub</a>
           <a href="project1.html" class="page-btn">Check it Out</a>
         </div>
       </div>
