took out hackathon experience, edited curve

--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
       
         <div class="project-card">
           <h3>Curve</h3>
-           <p>Get ahead of the curve at your exams, study like you're on steroids. With the help of dpr and RAG, Curve helps you extract your 'A' from 'AI' like never seen before..</p>
-          <div class="project-buttons">
+           <p>Get ahead of the curve, study like you're on steroids. Curve puts the  'A' in 'AI' like never  before.  </p>     
+            <div class="project-buttons">
             <a href="https://github.com/toonshi/ragsteps" class="page-btn">GitHub</a>
             <a href="https://curveai.streamlit.app" class="page-btn">Check it Out</a>
           </div>
