--- a/skills.html
+++ b/skills.html
@@ -91,7 +91,7 @@
 					<li>MySQL</li>
 					<li>SQLite</li>
 					<li>MongoDB</li>
-					<li>Firebase</li>
+					<li>Vector Databases</li>
 				</ul>
 			</div>
 
