--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
         <p>A local online marketplace where parents and businesses can buy and sell stationery, uniforms and course material. By connecting families,we offer both auction-style listings and fixed-price sales. Founded in 2024,Ziada is set to become one of Kenya's largest e-commerce platforms.</p>
         <div class="project-buttons">
           <a href="https://github.com/toonshi/" class="page-btn">GitHub</a>
-          <a href="project1.html" class="page-btn">Check it Out</a>
+          <a href="project1.html" class="page-btn">Coming Soon</a>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
           </p>
         <div class="project-buttons">
           <a href="https://github.com/toonshi/pharmiliar2.0" class="page-btn">GitHub</a>
-          <a href="project1.html" class="page-btn">Check it Out</a>
+          <a href="project1.html" class="page-btn">Coming Soon</a>
         </div>
       </div>
     </div>
