--- a/index.html
+++ b/index.html
@@ -1,73 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-05MN1BXS98"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Predator Eyes Animation</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: black;
+    }
 
-  gtag('config', 'G-05MN1BXS98');
-</script>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Michael Agoya</title>
+    .eye {
+      position: absolute;
+      width: 150px;
+      height: 80px;
+      background: radial-gradient(circle at center, rgb(240, 149, 12), black 70%);
+      border-radius: 70% 30% 70% 30% / 50% 50% 50% 50%; /* Sharp cat-eye shape */
+      animation: eyeOpen 1s ease-out, eyeBlink 2s 1s ease-in;
+    }
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="styles/main.css">
+    .eye::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 30%;
+      height: 60%;
+      background: black;
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+    }
+
+    .eye.left {
+      top: 40%;
+      left: 35%;
+      transform: rotate(10deg);
+    }
+
+    .eye.right {
+      top: 40%;
+      left: 55%;
+      transform: rotate(-10deg);
+    }
+
+    @keyframes eyeOpen {
+      0% {
+        transform: scaleY(0.1) scaleX(0.6);
+      }
+      50% {
+        transform: scaleY(1.2) scaleX(1);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    @keyframes eyeBlink {
+      0%, 90% {
+        transform: scale(1);
+      }
+      95% {
+        transform: scaleY(0.1);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    @keyframes dissolve {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: dissolve 2s 3s forwards;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- Navbar -->
-	<nav class="navbar">
-		<div>
-			<a href="index.html">Home</a>
-			<a href="projects.html">Projects</a>
-			<a href="skills.html">Skills</a>
-		</div>
-	</nav>
+  <div id="overlay">
+    <div class="eye left"></div>
+    <div class="eye right"></div>
+  </div>
 
-	<!-- Home Section -->
-	<section id="feature">
-		<div id="content">
-			<header>
-				<h2>Michael Agoya</h2>
-				<p class="large">Showcasing My Journey in Tech, Development, and Design</p>
-				<p>Welcome to my portfolio! Explore my projects, skills, and experiences as I navigate the exciting world of tech and development. Whether it's coding, designing, or problem-solving, I'm passionate about creating impactful solutions.</p>
-			</header>
-			<a href="https://linkedin.com/in/mikeagoya" class="cta">Connect on LinkedIn</a>
-		</div>
-
-		<div id="grid">
-			<div>
-				<h3>Project Highlights</h3>
-				<p>Explore my top projects, from web applications, to AI-driven solutions.</p>
-				<a href="projects.html" class="page-btn">View Projects</a>
-			</div>
-			<div>
-				<h3>Technical Skills</h3>
-				<p>Java, Django, JavaScript, Python, SQL, Blender and more. See my expertise in action.</p>
-				<a href="skills.html" class="page-btn">View Skills</a>
-			</div>
-			<div>
-				<h3>Writing Portfolio</h3>
-				<p>Check out my technical articles, where I break down complex topics and share insights.</p>
-				<a href="https://medium.com/@agoyamike" class="page-btn">Go to Medium</a>
-			</div>
-			
-		</div>
-	</section>
-
-	<!-- About Me Section -->
-	<section id="about">
-		<header>
-			<h2>About Me</h2>
-			<p>Hello! I'm Michael, a Computer Science student passionate about technology and development. I love turning ideas into reality through code and am always eager to learn and explore new tools and technologies.</p>
-			<a href="mailto:agoyamike@gmail.com" class="cta">Get in Touch</a>
-		</header>
-	</section>
+  <script>
+    setTimeout(() => {
+      window.location.href = 'index.html';
+    }, 5000); // Redirect after animation
+  </script>
 </body>
-
 </html>
