added blog website

--- a/main.html
+++ b/main.html
@@ -53,8 +53,8 @@
 			</div>
 			<div>
 				<h3>Writing Portfolio</h3>
-				<p>Check out my technical articles, where I break down complex topics and share insights.</p>
-				<a href="https://medium.com/@agoyamike" class="page-btn">Go to Medium</a>
+				<p>Check out my blog website, where I break down complex topics and share insights.</p>
+				<a href="https://mikeagoya.azurewebsites.net" class="page-btn">Go to Medium</a>
 			</div>
 			
 		</div>
